--- a/style.css
+++ b/style.css
@@ -12,8 +12,12 @@ body {
   position: relative;
 }
 
+.image {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 button {
-  background-color: #b80000;
+  background-color: #b80000; 
   color: white;
   padding: 5px;
   font-size: 16px;
@@ -21,4 +25,16 @@ button {
   width: 170px;
   border-radius: 20px;
   cursor: pointer;
+} 
+
+@media only screen and (max-width: 600px) {
+  button {
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  body {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
